# IronVein

./: .gitignore  Cargo.toml  README.md  railway-client.toml  railway.json
.cargo/: config.toml
client/: Cargo.toml  index.html  package-lock.json  package.json  railway.toml  vite.config.js
client/src/: lib.rs  main.js  main.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
