[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
ws_stream_wasm = "0.7.4"
futures = "0.3.30"
shared = { path = "../shared" }
bincode = "1.3.3"
gloo-utils = { version = "0.1", features = ["serde"] }
serde = "1.0.203"
log = "0.4.21"
wasm-bindgen-futures = "0.4.42"
serde_json = "1.0.117"
gloo-net = "0.2.6"
gloo-console = "0.2.3"
web-sys = { version = "0.3.69", features = ["MessageEvent"] }
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
