[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
bincode = "1.3.3"
serde = "1.0.203"
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebSocket",
    "MessageEvent",
    "MouseEvent",
    "Event",
    "BinaryType",
    "Blob",
    "FileReader",
    "HtmlElement",
    "CssStyleDeclaration"
] }




