[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bevy = { version = "0.14.0", default-features = false }
shared = { path = "../shared" }
bincode = "1.3.3"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres" ] }
dotenvy = "0.15"
futures-util = { version = "0.3", features = ["sink"] }
